add message flashes and Turbo compatibility

--- a/app/views/user/registrations/new.html.slim
+++ b/app/views/user/registrations/new.html.slim
@@ -1,5 +1,10 @@
 h1 User::Registrations#new
 
+- if @user.errors.any?
+  ul
+    - @user.errors.full_messages.each do |msg|
+      li = msg
+
 = form_for @user, url: { action: :create } do |f|
   .field
     = f.label :email
