--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,14 +9,15 @@ html
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
   body
+    => link_to "Home", root_path
     - if current_user
-      = link_to "Sign Out", user_sessions_path,
+      => link_to "Sign Out", user_sessions_path,
         data: { turbo_method: :delete }
-      = link_to "Profile", u_profiles_path
+      => link_to "TIL", u_feeds_recent_path
+      => link_to "Profile", u_profiles_path
     - else
-      = link_to "Sign Up", new_user_registrations_path
-      = link_to "Sign In", new_user_sessions_path
-    = link_to "Home", root_path
+      => link_to "Sign Up", new_user_registrations_path
+      => link_to "Sign In", new_user_sessions_path
     hr
     p#notice = flash[:notice]
     p#alert = flash[:alert]
