--- a/app/views/u/posts/show.html.slim
+++ b/app/views/u/posts/show.html.slim
@@ -1,5 +1,7 @@
 p style="color: green" = notice
 
+= link_to "All Posts", action: :index
+
 div id="#{dom_id @u_post}"
   h2 = @u_post.title
   = @u_post.body
@@ -7,3 +9,7 @@ div id="#{dom_id @u_post}"
 div
   => link_to "Edit this post", edit_u_post_path(@u_post.id)
   = button_to "Destroy this post", u_post_path(@u_post.id), method: :delete
+
+ul
+  - @u_replies.each do |reply|
+    li = "#{reply.owner.name}: #{reply.body}"
