--- a/app/views/u/posts/show.html.slim
+++ b/app/views/u/posts/show.html.slim
@@ -4,7 +4,7 @@ p style="color: green" = notice
 
 div id="#{dom_id @u_post}"
   h2 = @u_post.title
-  = @u_post.body
+  = markdown @u_post.body
 
 div
   => link_to "Edit this post", edit_u_post_path(@u_post.id)
