--- a/app/views/u/posts/show.html.slim
+++ b/app/views/u/posts/show.html.slim
@@ -4,7 +4,13 @@ p style="color: green" = notice
 
 div id="#{dom_id @u_post}"
   h2 = @u_post.title
-  = markdown @u_post.body
+  = action_text_pp @u_post.content
+  hr
+  = form_with model: @u_post, url: '/' do |f|
+    .field
+      = f.label :content
+      = f.rich_text_area :content
+  hr
 
 div
   => link_to "Edit this post", edit_u_post_path(@u_post.id)
@@ -12,4 +18,7 @@ div
 
 ul
   - @u_replies.each do |reply|
-    li = "#{reply.owner.name}: #{reply.body}"
+    hr
+    = reply.owner.name
+    br
+    = action_text_pp reply.content
