CRU posts with ActionText

--- a/app/views/u/posts/edit.html.slim
+++ b/app/views/u/posts/edit.html.slim
@@ -5,6 +5,6 @@ h1 Editing post
 br
 
 div
-  => link_to "Show this post", @u_post
+  => link_to "Show this post", u_post_path(@u_post)
   '|
   =< link_to "Back to posts", u_posts_path
