--- a/app/views/u/posts/_form.html.slim
+++ b/app/views/u/posts/_form.html.slim
@@ -1,4 +1,4 @@
-= form_with(model: @u_post) do |form|
+= form_with(model: @u_post, url: custom_polymorphic_path(@u_post)) do |form|
   - if @u_post.errors.any?
     div style="color: red"
       h2 = "#{pluralize(@u_post.errors.count, "error")} prohibited this u_post from being saved:"
@@ -7,4 +7,11 @@
           li = error.full_message
 
   div
+    .field
+      = form.label :title
+      = form.text_field :title
+    .field
+      = form.label :content
+      = form.rich_text_area :content
+
     = form.submit
