--- a/app/views/u/posts/show.html.slim
+++ b/app/views/u/posts/show.html.slim
@@ -7,9 +7,11 @@ p style="color: green" = notice
 div id="#{dom_id @u_post}"
   h2 = @u_post.title
   = action_text_pp @u_post.content
-div
-  => link_to "Edit this post", edit_u_post_path(@u_post.id)
-  = button_to "Destroy this post", u_post_path(@u_post.id), method: :delete
+
+- if policy(@u_post).update?
+  div
+    => link_to "Edit this post", edit_u_post_path(@u_post.id)
+    = button_to "Destroy this post", u_post_path(@u_post.id), method: :delete
 
 ul
   - @u_replies.each do |reply|
