--- a/app/views/u/posts/index.html.slim
+++ b/app/views/u/posts/index.html.slim
@@ -1,13 +1,15 @@
 h1 U::Posts#index
 
-- if @hash_tag
-  h2 = @hash_tag.name_with_hash
+- if @hash_tag_formatted
+  h2 = "##{@hash_tag_formatted}"
 
 ul
   - @u_posts.each do |post|
     li
       => "#{post.owner.name}: #{post.presentation_title}"
       = link_to "(#{humanize_datetime post.created_at})", u_post_path(post.id)
+  - if @u_posts.empty?
+    p None found
 
 = paginate @u_posts
 
