--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,19 +9,42 @@ html
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
   body
-    => link_to "Home", root_path
-    - if current_user
-      => link_to "Sign Out", user_sessions_path,
-        data: { turbo_method: :delete }
-      => link_to "TIL", u_posts_path
-      => link_to "Profile", u_profiles_path
-    - else
-      => link_to "Sign Up", new_user_registrations_path
-      => link_to "Sign In", new_user_sessions_path
+    
+    nav.navbar.navbar-expand-lg.bg-body-tertiary
+      .container-fluid
+        a.navbar-brand[href="#{root_path}"] Home
+        button.navbar-toggler[type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"]
+          span.navbar-toggler-icon
+        #navbarSupportedContent.collapse.navbar-collapse
+          ul.navbar-nav.me-auto.mb-2.mb-lg-0
+            ruby:
+              navlink_attrs = { class: 'nav-link' }
+            - if current_user
+              li.nav-item => link_to "TIL", u_posts_path, **navlink_attrs
+              li.nav-item => link_to "Profile", u_profiles_path, **navlink_attrs 
+              li.nav-item => link_to "Sign Out", user_sessions_path, data: { turbo_method: :delete }, **navlink_attrs
+            - else
+              li.nav-item => link_to "Sign Up", new_user_registrations_path, **navlink_attrs
+              li.nav-item => link_to "Sign In", new_user_sessions_path, **navlink_attrs
+            - if Rails.env.local?
+              li.nav-item.dropdown
+                a.nav-link.dropdown-toggle[href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"] 🔧 Dev
+                ruby:
+                  dropdown_attrs = { class: "dropdown-item", target: "_blank" }
+                ul.dropdown-menu
+                  li = link_to "Routes", "/rails/info/routes", **dropdown_attrs
+                  li = link_to "Email Previews", "/rails/mailers", **dropdown_attrs
+
+          / search, for future use
+          / form.d-flex[role="search"]
+            input.form-control.me-2[type="search" placeholder="Search" aria-label="Search"]
+            button.btn.btn-outline-success[type="submit"] Search
+
+
     hr
     p#notice = flash[:notice]
     p#alert = flash[:alert]
-    = yield
+    .container = yield
 
 - if Rails.env.local?
   hr
