--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -26,9 +26,11 @@ html
             - else
               li.nav-item => link_to "Sign Up", new_user_registrations_path, **navlink_attrs
               li.nav-item => link_to "Sign In", new_user_sessions_path, **navlink_attrs
+
             - if Rails.env.local?
               li.nav-item.dropdown
-                a.nav-link.dropdown-toggle[href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"] 🔧 Dev
+                a.nav-link.dropdown-toggle[href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"]
+                  span.badge.text-bg-warning Dev
                 ruby:
                   dropdown_attrs = { class: "dropdown-item", target: "_blank" }
                 ul.dropdown-menu
