--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -27,6 +27,12 @@ html
               li.nav-item => link_to "Sign Up", new_user_registrations_path, **navlink_attrs
               li.nav-item => link_to "Sign In", new_user_sessions_path, **navlink_attrs
 
+            - if current_user&.admin?
+              li.nav-item.dropdown
+                a.nav-link.dropdown-toggle[href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"] Admin
+                ul.dropdown-menu
+                  li.nav-item => link_to "Users", a_users_path, **navlink_attrs
+
             - if Rails.env.local?
               li.nav-item.dropdown
                 a.nav-link.dropdown-toggle[href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"]
