--- a/app/views/u/posts/_post_detail.html.slim
+++ b/app/views/u/posts/_post_detail.html.slim
@@ -13,6 +13,6 @@ ruby:
     - if policy(post_reply).update?
       a.card-link[href=(edit_u_post_path(post_reply.id))] Edit #{post_reply.model_name.human}
 
-    - if Rails.env.local?
+    - if Setting.dev
       p: span.badge.text-bg-warning = post_reply.id
 
