--- a/app/views/u/posts/_post_detail.html.slim
+++ b/app/views/u/posts/_post_detail.html.slim
@@ -11,8 +11,11 @@ ruby:
     h5.card-title = post_reply.title.presence
     p.card-text = action_text_pp post_reply.content
     - if policy(post_reply).update?
-      a.card-link[href=(edit_u_post_path(post_reply.id))] Edit #{post_reply.model_name.human}
+      - if post_reply.model_name.element == 'post'
+        a.card-link[href=(edit_u_post_path(post_reply.id))] Edit #{post_reply.model_name.human}
+      - if post_reply.model_name.element == 'reply'
+        a.card-link[href=(edit_u_post_reply_path(post_reply.root, post_reply))] Edit #{post_reply.model_name.human}
 
-    - if Rails.env.local?
-      p: span.badge.text-bg-warning = post_reply.id
+    - if Setting.dev
+      span.card-link.badge.text-bg-warning = post_reply.id
 
