--- a/app/views/u/profiles/show.html.slim
+++ b/app/views/u/profiles/show.html.slim
@@ -8,3 +8,4 @@ ul
   li = @user.about
   li = link_to 'Edit', edit_u_profiles_path
   li = link_to 'My Posts', user_u_posts_path(@user)
+  li = link_to 'My Bookmarks', u_bookmarks_path
