--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,17 +1,4 @@
 @import "bootstrap";
 @import "actiontext";
-
-.avatar {
-  width: 120px;
-  height: 120px;
-  border-radius: 50%;
-  object-fit: cover;
-}
-
-.avatar-sm {
-  width: 40px;
-  height: 40px;
-  display: inline-block;
-  border-radius: 50%;
-  object-fit: cover;
-}
+@import "turbo_progress_bar";
+@import "avatar";
