--- a/app/views/u/replies/create.turbo_stream.slim
+++ b/app/views/u/replies/create.turbo_stream.slim
@@ -1,7 +1,5 @@
-= turbo_stream.append 'replies' do
-  / this col is a bit of a hack to get the reply to render within a Bootstrap
-  / row on posts/show (see posts/show.html.slim for more context)
-  .col = render 'u/posts/post_detail', post_reply: @u_reply
+= turbo_stream.append [@u_reply.root, 'replies'] do
+  = render 'u/posts/post_detail', post_reply: @u_reply, user: current_user
 
 = turbo_stream.update UserContent::Reply.new do
   = link_to "Reply", new_u_post_reply_path(@u_post),
