--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,9 @@ html
     = csp_meta_tag
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
     = javascript_importmap_tags
+
+    = favicon_link_tag asset_path("favicon.ico")
+    = favicon_link_tag asset_path("apple-touch-icon.png"), rel: "apple-touch-icon"
   body
     
     nav.navbar.navbar-expand-lg.bg-body-tertiary
