--- a/app/views/u/posts/_form.html.slim
+++ b/app/views/u/posts/_form.html.slim
@@ -1,17 +1,19 @@
-= form_with model: @u_post, url: [:u, pluralize_new(@u_post)] do |form|
-  - if @u_post.errors.any?
-    div style="color: red"
-      h2 = "#{pluralize(@u_post.errors.count, "error")} prohibited this u_post from being saved:"
-      ul
-        - @u_post.errors.each do |error|
-          li = error.full_message
+= turbo_frame_tag @u_post do
+  = form_with model: @u_post, url: [:u, pluralize_new(@u_post)] do |form|
+    - if @u_post.errors.any?
+      div style="color: red"
+        h2 = "#{pluralize(@u_post.errors.count, "error")} prohibited this u_post from being saved:"
+        ul
+          - @u_post.errors.each do |error|
+            li = error.full_message
 
-  div
-    .field
-      = form.label :title
-      = form.text_field :title
-    .field
-      = form.label :content
-      = form.rich_text_area :content
+    div
+      .field
+        = form.label :title
+        = form.text_field :title
+      .field
+        = form.label :content
+        = form.rich_text_area :content
 
-    = form.submit
+      = form.submit
+      /= link_to 'Cancel', u_post_path(@u_post)
